--- a/formalization/rustspec.bib
+++ b/formalization/rustspec.bib
@@ -6,3 +6,18 @@
     archivePrefix={arXiv},
     primaryClass={cs.PL}
 }
+@InProceedings{karthik2018hacspec,
+author="Bhargavan, Karthikeyan
+and Kiefer, Franziskus
+and Strub, Pierre-Yves",
+editor="Cremers, Cas
+and Lehmann, Anja",
+title="hacspec: Towards Verifiable Crypto Standards",
+booktitle="Security Standardisation Research",
+year="2018",
+publisher="Springer International Publishing",
+address="Cham",
+pages="1--20",
+abstract="We present hacspec, a collaborative effort to design a formal specification language for cryptographic primitives. Specifications (specs) written in hacspec are succinct, easy to read and implement, and lend themselves to formal verification using a variety of existing tools. The syntax of hacspec is similar to the pseudocode used in cryptographic standards but is equipped with a static type system and syntax checking tools that can find errors. Specs written in hacspec are executable and can hence be tested against test vectors taken from standards and specified in a common format. Finally, hacspec is designed to be compilable to other formal specification languages like F{\$}{\$}{\{}{\}}^{\{}{\backslash}star {\}}{\$}{\$}, EasyCrypt, Coq, and cryptol, so that it can be used as the basis for formal proofs of functional correctness and cryptographic security using various verification frameworks. This paper presents the syntax, design, and tool architecture of hacspec. We demonstrate the use of the language to specify popular cryptographic algorithms, and describe preliminary compilers from hacspec to F{\$}{\$}{\{}{\}}^{\{}{\backslash}star {\}}{\$}{\$}and to EasyCrypt. Our goal is to invite authors of cryptographic standards to write their pseudocode in hacspec and to help the formal verification community develop the language and tools that are needed to promote high-assurance cryptographic software backed by mathematical proofs.",
+isbn="978-3-030-04762-7"
+}
